@@ -50,6 +50,9 @@ API Changes
 * LUCENE-7701: Grouping collectors have been refactored, such that groups are
   now defined by a GroupSelector implementation. (Alan Woodward)
 
+* LUCENE-7741: DoubleValuesSource now has an explain() method (Alan Woodward,
+  Adrien Grand)
+
 Bug Fixes
 
 * LUCENE-7626: IndexWriter will no longer accept broken token offsets
